// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DefinitionList > renders layout (single-column) > expected html 1`] = `
<div>
  <dl
    class="group divide-y border-y"
    data-layout="single-column"
  >
    <div
      class="grid gap-3 py-4 group-data-[layout=two-column]:sm:grid-cols-3 group-data-[layout=two-column]:sm:gap-4 group-data-[layout=two-column]:sm:py-6"
    >
      <dt
        class="font-semibold"
      >
        Term 1
      </dt>
      <dd
        class="group-data-[layout=two-column]:sm:col-span-2"
      >
        Description 1
      </dd>
    </div>
    <div
      class="grid gap-3 py-4 group-data-[layout=two-column]:sm:grid-cols-3 group-data-[layout=two-column]:sm:gap-4 group-data-[layout=two-column]:sm:py-6"
    >
      <dt
        class="font-semibold"
      >
        Term 2
      </dt>
      <dd
        class="group-data-[layout=two-column]:sm:col-span-2"
      >
        Description 2
      </dd>
    </div>
  </dl>
</div>
`;

exports[`DefinitionList > renders layout (two-column) > expected html 1`] = `
<div>
  <dl
    class="group divide-y border-y"
    data-layout="two-column"
  >
    <div
      class="grid gap-3 py-4 group-data-[layout=two-column]:sm:grid-cols-3 group-data-[layout=two-column]:sm:gap-4 group-data-[layout=two-column]:sm:py-6"
    >
      <dt
        class="font-semibold"
      >
        Term 1
      </dt>
      <dd
        class="group-data-[layout=two-column]:sm:col-span-2"
      >
        Description 1
      </dd>
    </div>
    <div
      class="grid gap-3 py-4 group-data-[layout=two-column]:sm:grid-cols-3 group-data-[layout=two-column]:sm:gap-4 group-data-[layout=two-column]:sm:py-6"
    >
      <dt
        class="font-semibold"
      >
        Term 2
      </dt>
      <dd
        class="group-data-[layout=two-column]:sm:col-span-2"
      >
        Description 2
      </dd>
    </div>
  </dl>
</div>
`;

exports[`DefinitionList > renders layout (undefined) > expected html 1`] = `
<div>
  <dl
    class="group divide-y border-y"
    data-layout="two-column"
  >
    <div
      class="grid gap-3 py-4 group-data-[layout=two-column]:sm:grid-cols-3 group-data-[layout=two-column]:sm:gap-4 group-data-[layout=two-column]:sm:py-6"
    >
      <dt
        class="font-semibold"
      >
        Term 1
      </dt>
      <dd
        class="group-data-[layout=two-column]:sm:col-span-2"
      >
        Description 1
      </dd>
    </div>
    <div
      class="grid gap-3 py-4 group-data-[layout=two-column]:sm:grid-cols-3 group-data-[layout=two-column]:sm:gap-4 group-data-[layout=two-column]:sm:py-6"
    >
      <dt
        class="font-semibold"
      >
        Term 2
      </dt>
      <dd
        class="group-data-[layout=two-column]:sm:col-span-2"
      >
        Description 2
      </dd>
    </div>
  </dl>
</div>
`;
